Support unbans by username + migrations
- It comes with a separate worker which automates migrations

--- a/watcher-bot.cabal
+++ b/watcher-bot.cabal
@@ -88,6 +88,7 @@ library
                       Watcher.Bot.Types.MessageFrom
                       Watcher.Bot.Types.UserInfo
                       Watcher.Bot.Utils
+                      Watcher.Migration
                       Watcher.Orphans
                       Telegram.Bot.API.Names
 
