Move `spamerBans` from `HashMap` to concurrent `HashTable`

--- a/watcher-bot.cabal
+++ b/watcher-bot.cabal
@@ -113,6 +113,7 @@ library
                     , base16-bytestring
                     , bytestring
                     , cassava
+                    , concurrent-hashtable
                     , containers
                     , cryptohash-sha256
                     , dhall
