feat: implement webhook communication mode

--- a/watcher-bot.cabal
+++ b/watcher-bot.cabal
@@ -137,6 +137,8 @@ library
                     , time
                     , unordered-containers
                     , vector
+                    , warp
+                    , warp-tls
                     , zstd
 
     -- Directories containing source files.
